--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
-    "node-cron": "^3.0.2",
-    "puppeteer": "^19.7.3"
+    "node-cron": "^3.0.2"
   }
 }
