--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.5.0",
-    "axios": "^1.3.4",
     "date-and-time": "^2.4.2",
     "discord-api-types": "^0.37.35",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "request": "^2.88.2"
   }
 }
